--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,30 @@
 <html>
+    <head>
+        <title>article one</title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr>
+        <h1>Article one</h1>
+        <div>
+            Aug,2017
+        </div>
+        <div>
+            <p>
+                This is the content of article one. This is the content of article one. This is the content of article one.
+                This is the content of article one. This is the content of article one. This is the content of article one.
+            </p>
+            <p>
+                This is the content of article one. This is the content of article one. This is the content of article one.
+                This is the content of article one. This is the content of article one. This is the content of article one.
+            </p>
+            <p>
+                This is the content of article one. This is the content of article one. This is the content of article one.
+                This is the content of article one. This is the content of article one. This is the content of article one.
+            </p>
+        </div>
+    </body>
 </html>
+
