[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,2 +1,22 @@
 <html>
+    <head>
+        <title>article one</title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr>
+        <h1>Article two</h1>
+        <div>
+            Aug,2017
+        </div>
+        <div>
+            <p>
+                This is the content of article two . This is the content of article two. This is the content of article two.
+            
+            </p>
+        </div>
+    </body>
 </html>
+
