--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,2 +1,21 @@
 <html>
+    <head>
+        <title>article three</title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr>
+        <h1>Article three</h1>
+        <div>
+            Aug,2017
+        </div>
+        <div>
+            <p>
+                This is the content of article three. This is the content of article three. This is the content of article three.
+            
+            </p>
+        </div>
+    </body>
 </html>
