--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,9 +1,19 @@
 <html>
     <head>
         <title>article one</title>
+        <style>
+            .container
+            {
+                max-width:800px;
+                margin:center;
+                color:grey;
+                font-family:san-sarif;
+            }
+        </style>
     </head>
     <body>
         <div>
+        <div class="container">
             <a href="/">Home</a>
         </div>
         <hr>
@@ -24,6 +34,7 @@
                 This is the content of article one. This is the content of article one. This is the content of article one.
                 This is the content of article one. This is the content of article one. This is the content of article one.
             </p>
+        </div>
         </div>
     </body>
 </html>
