--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,12 +2,18 @@
     <head>
         <title>article one</title>
         <style>
-            
+            .container
+            {
+                max-width:800px;
+                margin:center;
+                color:grey;
+                font-family:san-sarif;
+            }
         </style>
     </head>
     <body>
-        <div>
         <div class="container">
+        <div>
             <a href="/">Home</a>
         </div>
         <hr>
