--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,7 +5,7 @@
             .container
             {
                 max-width:400px;
-                margin:center;
+                margin:0;
                 color:grey;
                 font-family:san-sarif;
             }
