--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -10,6 +10,7 @@
                 font-family:san-sarif;
             }
         </style>
+        <meta name="viewport" content="width-device-width,initial-scale=1"/>
     </head>
     <body>
         <div class="container">
