--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,15 +1,7 @@
 <html>
     <head>
         <title>article one</title>
-        <style>
-            .container
-            {
-                max-width:400px;
-                margin:0;
-                color:grey;
-                font-family:san-sarif;
-            }
-        </style>
+        <link href="/ui/style.css" rel="stylesheet" />
         <meta name="viewport" content="width-device-width,initial-scale=1"/>
     </head>
     <body>
